[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/Map.gd" type="Script" id=1]
[ext_resource path="res://scenes/ScoreUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://shaders/linerand.shader" type="Shader" id=3]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
lifetime_randomness = 1.0
emission_shape = 2
emission_box_extents = Vector3( 640, 360, 1 )
flag_disable_z = true
flatness = 0.5
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -100.0
tangential_accel = -48.84
angle = 720.0
scale = 3.0
scale_random = 1.0
color_ramp = SubResource( 2 )

[sub_resource type="SegmentShape2D" id=4]
a = Vector2( 1, 1 )
b = Vector2( 1, 719 )

[sub_resource type="SegmentShape2D" id=5]
a = Vector2( 1279, 1 )
b = Vector2( 1279, 719 )

[sub_resource type="SegmentShape2D" id=6]
a = Vector2( 1, 1 )
b = Vector2( 1279, 1 )

[sub_resource type="SegmentShape2D" id=7]
a = Vector2( 1, 719 )
b = Vector2( 1279, 719 )

[sub_resource type="SegmentShape2D" id=8]
a = Vector2( -200, -50 )
b = Vector2( 200, -50 )

[sub_resource type="ShaderMaterial" id=9]
shader = ExtResource( 3 )
shader_param/square_size = 0.05
shader_param/from = Color( 0.2, 0.2, 0.6, 1 )
shader_param/to = Color( 0.4, 1, 1, 1 )

[sub_resource type="SegmentShape2D" id=10]
a = Vector2( -200, 50 )
b = Vector2( 200, 50 )

[sub_resource type="SegmentShape2D" id=11]
a = Vector2( -200, -50 )
b = Vector2( -200, 50 )

[sub_resource type="SegmentShape2D" id=12]
a = Vector2( 200, -50 )
b = Vector2( 200, 50 )

[sub_resource type="ShaderMaterial" id=13]
shader = ExtResource( 3 )
shader_param/square_size = 0.05
shader_param/from = Color( 0.2, 0.2, 0.6, 1 )
shader_param/to = Color( 0.4, 1, 1, 1 )

[node name="Map" type="Node2D"]
script = ExtResource( 1 )

[node name="Starfield" type="Particles2D" parent="."]
position = Vector2( 640, 360 )
amount = 128
lifetime = 50.0
speed_scale = 14.08
randomness = 0.68
visibility_rect = Rect2( -300, -100, 600, 200 )
process_material = SubResource( 3 )

[node name="WestBody" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 25

[node name="WestShape" type="CollisionShape2D" parent="WestBody"]
shape = SubResource( 4 )

[node name="EastBody" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 25

[node name="EastShape" type="CollisionShape2D" parent="EastBody"]
shape = SubResource( 5 )

[node name="NorthBody" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 25

[node name="NorthShape" type="CollisionShape2D" parent="NorthBody"]
position = Vector2( 1, 0 )
shape = SubResource( 6 )

[node name="SouthBody" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 25

[node name="SouthShape" type="CollisionShape2D" parent="SouthBody"]
shape = SubResource( 7 )

[node name="ScoreNorthBody" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 25

[node name="ScoreNorthShape" type="CollisionShape2D" parent="ScoreNorthBody"]
position = Vector2( 640, 360 )
shape = SubResource( 8 )

[node name="Line2D" type="Line2D" parent="ScoreNorthBody/ScoreNorthShape"]
material = SubResource( 9 )
points = PoolVector2Array( -200, -50, 200, -50 )
width = 3.0
default_color = Color( 1, 1, 1, 1 )
texture_mode = 2

[node name="ScoreSouthBody" type="StaticBody2D" parent="."]
position = Vector2( 0, -1 )
collision_layer = 2
collision_mask = 25

[node name="ScoreSouthShape" type="CollisionShape2D" parent="ScoreSouthBody"]
position = Vector2( 640, 360 )
shape = SubResource( 10 )

[node name="Line2D" type="Line2D" parent="ScoreSouthBody/ScoreSouthShape"]
material = SubResource( 9 )
position = Vector2( 0, 100 )
points = PoolVector2Array( -200, -50, 200, -50 )
width = 3.0
default_color = Color( 1, 1, 1, 1 )
texture_mode = 2

[node name="ScoreWestBody" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 25

[node name="ScoreWestShape" type="CollisionShape2D" parent="ScoreWestBody"]
position = Vector2( 640, 360 )
shape = SubResource( 11 )

[node name="Line2D" type="Line2D" parent="ScoreWestBody/ScoreWestShape"]
material = SubResource( 9 )
position = Vector2( 0, 100 )
points = PoolVector2Array( -200, -150, -200, -50 )
width = 3.0
default_color = Color( 1, 1, 1, 1 )
texture_mode = 2

[node name="ScoreEastBody" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 25

[node name="ScoreEastShape" type="CollisionShape2D" parent="ScoreEastBody"]
position = Vector2( 640, 360 )
shape = SubResource( 12 )

[node name="Line2D" type="Line2D" parent="ScoreEastBody/ScoreEastShape"]
material = SubResource( 13 )
position = Vector2( 0, 100 )
points = PoolVector2Array( 200, -150, 200, -50 )
width = 3.0
default_color = Color( 1, 1, 1, 1 )
texture_mode = 2

[node name="ScoreUserInterface" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 472.0
margin_top = 330.0
margin_right = 472.0
margin_bottom = 330.0

[node name="PlayerSpawn" type="Position2D" parent="."]
position = Vector2( 1113.46, 97.2957 )

[node name="WaveRestartTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="WaveRestartTimer" to="." method="_on_Timer_timeout"]
